<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2B2B"
    android:backgroundTint="#2E2B2B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="64dp"
        android:text="Hello World!"
        android:textAlignment="viewEnd"
        android:textColor="#EAD9D9"
        android:textSize="63sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnAString"
        android:textColor="#303868"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnHString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btnI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnIString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btnL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnLString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/btnM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnMString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.895" />

    <Button
        android:id="@+id/btnO"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnOString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnNString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btnP"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnPString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btnK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnKString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/btnJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnJString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnGString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnCString"
        android:textColor="#303868"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnB"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnBString"
        android:textColor="#303868"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnDString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnEString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/calcBtn"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/btnFString"
        android:textColor="#303868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
        app:layout_constraintVertical_bias="0.243" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="374dp" />

</androidx.constraintlayout.widget.ConstraintLayout>